click on steps, no audio fade out

--- a/langs/ar-SA.json
+++ b/langs/ar-SA.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "يبدأ تنزيل الأغاني تلقائيًا عند فتح صفحة المستوى",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "تجاوز حد نقطة التفتيش",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "يتجاوز حد 50 نقطة تفتيش",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "جمع العملات في التدريب",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "يقفل المؤشر على النافذة أثناء اللعب/التحرير",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "تشغيل القائمة الرئيسية",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "تحكم في اللعب في القائمة الرئيسية",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "لا يوجد انتقال",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "يقصر وقت انتقال المشهد إلى 0 ثانية",
   "UNIVERSAL/HACK_SAFE_MODE": "الوضع الآمن",
