--- a/langs/ca-ES.json
+++ b/langs/ca-ES.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Comença a baixar cançons automàticament quan obris la pàgina del nivell",
   "LEVEL/HACK_AUTO_START_POS": "StartPos Automàtic",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Coŀloca StartPos's automàticament als portals",
-  "LEVEL/HACK_CBF": "Click Between Frames",
-  "LEVEL/HACK_CBF/TIP": "Commuta Click Between Frames de Syzzi (ha d'estar instaŀlat!)",
+  "LEVEL/CBF/HACK_CBF": "Click Between Frames",
+  "LEVEL/CBF/HACK_CBF/TIP": "Commuta Click Between Frames de Syzzi (ha d'estar instaŀlat!)",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Ometre Límit de Punts de Control",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Omet el límit de 50 punts de control",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Recollir Monedes en Pràctica",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Blqueja el cursor a la finestra mentre es juga/edita",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Jugar des del Menú Principal",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Preneu el control del joc al menú principal",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Sense Transició",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Redueix el temps de transició d'escena a 0s",
   "UNIVERSAL/HACK_SAFE_MODE": "Mode Segur",
