--- a/langs/de-DE.json
+++ b/langs/de-DE.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Beginnt bei Öffnen einer Levelseite automatisch den Download aller Songs",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpoint-Limit-Bypass",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Umgeht das Limit von 50 Checkpoints im Practice-Modus",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Practice-Coinsammlung",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Fixiert den Mauszeiger während des Spielens bzw. der Bearbeitung im Fenster",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Hauptmenü-Gameplay",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Ermöglicht das Steuern der Icons im Hauptmenü",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Keine Übergänge",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Deaktiviert Szenenübergänge",
   "UNIVERSAL/HACK_SAFE_MODE": "Sicherer Modus",
