--- a/langs/el-GR.json
+++ b/langs/el-GR.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Ξεκινά αυτόματα η λήψη τραγουδιών όταν ανοίγετε τη σελίδα επιπέδου",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Παράκαμψη ορίου σημείου ελέγχου",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Παρακάμπτει το όριο των 50 σημείων ελέγχου",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Συλλέξτε νομίσματα στην πράξη",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Κλειδώνει τον κέρσορα στο παράθυρο κατά την αναπαραγωγή/επεξεργασία",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Κύριο μενού Αναπαραγωγή",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Πάρτε τον έλεγχο του παιχνιδιού στο κύριο μενού",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Χωρίς Μετάβαση",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Συντόμευση του χρόνου μετάβασης σκηνής σε 0s",
   "UNIVERSAL/HACK_SAFE_MODE": "Ασφαλής λειτουργία",
