--- a/langs/es-CO.json
+++ b/langs/es-CO.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Automáticamente empieza a descargar canciones cuando abre la página del nivel",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Bypass Límite de Checkpoints",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Bypassea el límite de 50 checkpoints",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Recoger Monedas en Práctica",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Bloquea el cursor en la ventana mientras juega o edita",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Jugar en Menú Principal",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Toma el control del juego en el menú principal",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Sin Transición",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Acorta el tiempo de transición de escena a 0s",
   "UNIVERSAL/HACK_SAFE_MODE": "Modo Seguro",
