--- a/langs/et-EE.json
+++ b/langs/et-EE.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Alustab automaatselt muusika allalaadimist, kui avate taseme lehe",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Kontrollpunkti Piiri Ümbersõit",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Läbib 50 kontrollpunkti piiri",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Koguge Münte Praktikarežiimis",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Lukustage hiir mängimise/redigeerimise ajal akna külge",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Peamenüü Mängib",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Juhtige mängu peamenüüs",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Ülekannet pole",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Vähendab stseeni ülemineku aega nullini",
   "UNIVERSAL/HACK_SAFE_MODE": "Turvarežiimi",
