--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Mailaren orria irekitzean, abestiak automatikoki jaisten hasten dira",
   "LEVEL/HACK_AUTO_START_POS": "StartPos Automatikoa",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Portaletan automatikoki StartPos kokatzen ditu",
-  "LEVEL/HACK_CBF": "Click Between Frames",
-  "LEVEL/HACK_CBF/TIP": "Syzzi-k sortutako Click Between Frames-eko etengailua (jadanik jaitsita egin behar da!)",
+  "LEVEL/CBF/HACK_CBF": "Click Between Frames",
+  "LEVEL/CBF/HACK_CBF/TIP": "Syzzi-k sortutako Click Between Frames-eko etengailua (jadanik jaitsita egin behar da!)",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpoint Mugaren Bypass",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "50 checkpoint-en muga kentzen du",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Praktikan Txanponak Hartu",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Jolastean/Editatzean, kurtsorea lehioaren barruan giltzaperatzen du",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Jolastu Menu Nagusian",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Menu nagusien jokalarien kontrola har ezazu!",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Transiziorik Ez",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Agertokien transizio-denbora 0 segundura laburtzen du",
   "UNIVERSAL/HACK_SAFE_MODE": "Modu Segurua",
