--- a/langs/fr-FR.json
+++ b/langs/fr-FR.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Télécharge automatiquement les musiques et les sons sur la page du niveau",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "Click Between Frames",
-  "LEVEL/HACK_CBF/TIP": "Active/Désactive le mod Click Between Frames de Syzzi (doit être installé !)",
+  "LEVEL/CBF/HACK_CBF": "Click Between Frames",
+  "LEVEL/CBF/HACK_CBF/TIP": "Active/Désactive le mod Click Between Frames de Syzzi (doit être installé !)",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Limite de Checkpoints",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Contourne la limite de 50 Checkpoints",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Collect. Pièces Pratique",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Verrouille le curseur dans la fenêtre pendant le jeu ou l'édition",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Jouer dans le Menu Principal",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Permet de prendre le contrôle des personnages et de leur gameplay dans le menu principal",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Aucune transition",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Réduit le temps de transition entre les menus à 0s",
   "UNIVERSAL/HACK_SAFE_MODE": "Mode Safe",
