--- a/langs/ga-IE.json
+++ b/langs/ga-IE.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Tosaíonn sé amhráin a íoslódáil go huathoibríoch nuair a osclaíonn tú an leathanach leibhéal",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Seachbhóthar Teorainn Seicphointe",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Seachnaíonn sé teorainn 50 seicphointe",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Boinn Bailigh Go Cleachtais",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Glais an Cúrsóir don fhuinneog agus tú ag imirt/eagarthóireacht",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Imríonn Príomh-Roghchlár",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Faigh smacht ar imirt sa phríomh-roghchlár",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Gan Aistriú",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Giorraíonn trasdul radharc go 0 soicind",
   "UNIVERSAL/HACK_SAFE_MODE": "Mód Sábháilte",
