--- a/langs/it-IT.json
+++ b/langs/it-IT.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Avvia automaticamente il download delle canzoni quando apri la pagina del livello",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Bypass Limite Checkpoint",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Sblocca il limite di 50 checkpoint",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Raccogli Monete In Pratica",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Blocca il cursore alla finestra durante il gioco/modifica",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Gioca dal Menu Principale",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Permette di controllare il gameplay nel menu principale",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Nessuna Transizione",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Riduce a 0s il tempo di transizione tra le scene",
   "UNIVERSAL/HACK_SAFE_MODE": "Modalità Sicura",
