--- a/langs/kk-KZ.json
+++ b/langs/kk-KZ.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Деңгей бетін ашқан кезде ол әндерді автоматты түрде жүктей бастайды",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Чекпоинттерге Лимитті Айналып Өту",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "50 чекпоинт шегін айналып өтеді",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Жаттығуда Тиындарды Жинау",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Ойнату/өңдеу кезінде курсорды терезеге бекітеді",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Негізгі мәзірдегі ойын",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Негізгі мәзірде геймплейді басқару",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Өтулерді өшіру",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Көріністер арасындағы ауысу уақытын 0с дейін қысқартады",
   "UNIVERSAL/HACK_SAFE_MODE": "Қауіпсіз режим",
