--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "레벨 페이지를 열면 자동으로 노래를 다운로드합니다.",
   "LEVEL/HACK_AUTO_START_POS": "자동 스타트포스",
   "LEVEL/HACK_AUTO_START_POS/TIP": "포탈에 스타트포스를 자동으로 배치합니다.",
-  "LEVEL/HACK_CBF": "Click Between Frames",
-  "LEVEL/HACK_CBF/TIP": "Click Between Frames를 켜거나 끕니다. Syzzi 제작 (설치가 필요합니다!)",
+  "LEVEL/CBF/HACK_CBF": "Click Between Frames",
+  "LEVEL/CBF/HACK_CBF/TIP": "Click Between Frames를 켜거나 끕니다. Syzzi 제작 (설치가 필요합니다!)",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "체크포인트 제한 우회",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "50개의 체크포인트 제한을 우회합니다.",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "연습 모드에서 코인 획득",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "플레이/편집 중 창에 커서를 고정합니다.",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "메인 메뉴 플레이",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "메인 메뉴에서 게임플레이를 제어할 수 있습니다.",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "전환 비활성화",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "장면 전환 시간을 0초로 단축합니다.",
   "UNIVERSAL/HACK_SAFE_MODE": "안전 모드",
