--- a/langs/lt-LT.json
+++ b/langs/lt-LT.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Automatiškai atsiunčia lygio dainas atidarius jo puslapį",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Sugrįžimo Taškų Ribos Apeitis",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Pašalina 50 sugrįžimo taškų ribą",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Monetų Rinkimas Praktikos Režime",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Sulaiko žymeklį lange žaidžiant arba redaguojant",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Žaisti Pagrindiniame Meniu",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Leidžia perimti žaidimo valdymą iš pagrindinio meniu",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Išjungti Perėjimus",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Sutrumpina langų perėjimus iki 0s",
   "UNIVERSAL/HACK_SAFE_MODE": "Saugus Režimas",
