--- a/langs/nb-NO.json
+++ b/langs/nb-NO.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Begynner å laste ned sanger automatisk når du åpner nivåmenyen",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Sjekkpunkt-grense Bypass",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Forbigår den vanlige sjekkpunkt grensen (50)",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Hente Mynter i Øvingsmodus",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Låsen markøren til vinduet under spilling / endring",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Spilling i Hovedmenyen",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Ta kontroll av spillet i hovedmenyen",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Ingen Overgang",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Forkorter sceneovergangstid til 0s",
   "UNIVERSAL/HACK_SAFE_MODE": "Trygg Modus",
