--- a/langs/nl-NL.json
+++ b/langs/nl-NL.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Begint automatisch met het downloaden van nummers wanneer u de niveaupagina opent",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Controlepuntlimiet Omzeilen",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Omzeilt de limiet van 50 controlepunten",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Verzamel Munten In De Praktijk",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Vergrendelt de cursor op het venster tijdens het afspelen/bewerken",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Hoofdmenu Afspelen",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Neem de controle over het spel in het hoofdmenu",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Geen Transitie",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Verkort de scène-overgangstijd naar 0s",
   "UNIVERSAL/HACK_SAFE_MODE": "Veilige Modus",
