--- a/langs/pl-PL.json
+++ b/langs/pl-PL.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Automatycznie rozpoczyna pobieranie utworów po otwarciu strony poziomu",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "Click Between Frames",
-  "LEVEL/HACK_CBF/TIP": "Włącza/wyłącza Click Between Frames autorstwa Syzzi (musi być zainstalowane!)",
+  "LEVEL/CBF/HACK_CBF": "Click Between Frames",
+  "LEVEL/CBF/HACK_CBF/TIP": "Włącza/wyłącza Click Between Frames autorstwa Syzzi (musi być zainstalowane!)",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Obejście Limitu Checkpointów",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Omija limit 50 checkpointów",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Zbieranie Monet w Practice",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Blokuje kursor w oknie podczas grania/edycji",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Gra W Menu Głównym",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Pozwala sterować ikonami w menu głównym",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Wyłącz Przejścia",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Skraca czas przejścia między scenami do 0s",
   "UNIVERSAL/HACK_SAFE_MODE": "Tryb Bezpieczny",
