--- a/langs/pt-BR.json
+++ b/langs/pt-BR.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Automaticamente começa a baixar músicas quando você abrir a página da fase",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Bypass de Limite de Checkpoint",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Burla o limite de 50 de checkpoint",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Coletar Moedas em Prática",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Trava o cursor na janela enquanto está jogando/editando",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Jogo do Menu Principal",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Controlar o jogo no menu principal",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Sem Transição",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Diminui o tempo de transição de cena para 0s",
   "UNIVERSAL/HACK_SAFE_MODE": "Modo Seguro",
