--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Автоматически скачивает музыку при открытии страницы уровня",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Без лимита чекпоинтов",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Убирает лимит в 50 чекпоинтов",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Собирать монеты в практике",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Блокирует курсор внутри окна игры во время редактирования или игры в уровень",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Игра в главном меню",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Позволяет управлять иконками в главном меню игры",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Без переходов",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Удаляет время перехода мужду сценами",
   "UNIVERSAL/HACK_SAFE_MODE": "Безопасный режим",
