--- a/langs/tr-TR.json
+++ b/langs/tr-TR.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Seviye sayfası açıldığında şarkıları otomatik indirir",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpoint Limit Baypas",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "50 checkpoint sınırını geçinmesine izin verir",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Antrenmanda Coin Toplama",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Oynatma yada seviye düzenleme sırasında fare imleci pencereye kilitler",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Ana Menüde Oynama",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Ana menüde oyunun kontrolünü ele alınmasına izin verir",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Sahne Geçişi Yok",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Sahne geçiş süresini 0s'ye kısaltır",
   "UNIVERSAL/HACK_SAFE_MODE": "Güvenli Mod",
