--- a/langs/uk-UA.json
+++ b/langs/uk-UA.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Автоматично починає завантажувати трек, коли відкрито сторінку з рівнем",
   "LEVEL/HACK_AUTO_START_POS": "Автом. старт. позиції",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Автоматично ставить стартові позиції на порталах",
-  "LEVEL/HACK_CBF": "Click Between Frames",
-  "LEVEL/HACK_CBF/TIP": "Вмикає мод «Click Between Frames» від Syzzi (ви повинні встановити мод, щоб користуватися ним!)",
+  "LEVEL/CBF/HACK_CBF": "Click Between Frames",
+  "LEVEL/CBF/HACK_CBF/TIP": "Вмикає мод «Click Between Frames» від Syzzi (ви повинні встановити мод, щоб користуватися ним!)",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Байпас чекпоінтів",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Знімає обмеження на кількість чекпоінтів в практиці",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Збирання монет в практиці",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Знерухомлює курсор у вікні при грі/редагуванні",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Гра в головному меню",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Можна контролювати грою іконок в головному меню",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Деакт. переходів",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Змінює час переходів між сценами на 0 с",
   "UNIVERSAL/HACK_SAFE_MODE": "Безпечний режим",
