--- a/langs/zh-HK.json
+++ b/langs/zh-HK.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "打開關卡詳情時自動下載關卡的歌曲和音效",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "練習重生點限制",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "解除五十個練習模式重生點限制",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "練習模式硬幣",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "打關卡和造關卡時鎖定鼠標在遊戲窗口內",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "在主選項單內遊玩",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "可以控制在主選項單背景的玩家",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "無場景轉場",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "場景轉場時間調成零秒鐘",
   "UNIVERSAL/HACK_SAFE_MODE": "安全模式",
