--- a/langs/de-CH.json
+++ b/langs/de-CH.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Ladt automatisch d Songs abe sobald du d Level Siite uufmachsch",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Spicherponkt Limit Umgoh",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Umgoht s Limit fo 50 Spicherpönkt",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Sammel Münze im Üebigsmodus uuf",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Bhaltet diin Cursor im Game während imene Level oder im Editor besch",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Houpt Menu Spele",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Übernim d kontrolle fom Gameplay in Houptmenu",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Kei Übergang",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Setzt d Übergangsszene 0s",
   "UNIVERSAL/HACK_SAFE_MODE": "Sicherheitsmodus",
