--- a/langs/en-GB.json
+++ b/langs/en-GB.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Automatically starts downloading songs when you open the level page",
   "LEVEL/HACK_AUTO_START_POS": "Auto StartPos",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Automatically places StartPos's at portals",
-  "LEVEL/HACK_CBF": "Click Between Frames",
-  "LEVEL/HACK_CBF/TIP": "Toggles Click Between Frames by Syzzi (must be installed!)",
+  "LEVEL/CBF/HACK_CBF": "Click Between Frames",
+  "LEVEL/CBF/HACK_CBF/TIP": "Toggles Click Between Frames by Syzzi (must be installed!)",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click on Steps",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Only registers inputs with 240 TPS precision, keeping vanilla physics",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpoint Limit Bypass",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Bypasses 50 checkpoint limit",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Collect Coins In Practice",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Locks Cursor to window while playing/editing",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Main Menu Play",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Take control of gameplay in the main menu",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "No Audio Fade Out",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Stops songs fading out. By Beat",
   "UNIVERSAL/HACK_NO_TRANSITION": "No Transition",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Shortens scene transition time to 0s",
   "UNIVERSAL/HACK_SAFE_MODE": "Safe Mode",
