--- a/langs/es-AR.json
+++ b/langs/es-AR.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Empieza a descargar la música ni bien abrís la página del nivel",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Bypass del límite de checkpoints",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Saca el límite de 50 checkpoints",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Agarrar monedas en modo práctica",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Bloquea el cursor a la ventana mientras jugás o editás",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Jugar en el menú principal",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Controla a los íconos del menú principal",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Sin transiciones",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Fija la duración de las transiciones a 0s",
   "UNIVERSAL/HACK_SAFE_MODE": "Modo Seguro",
