--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Inicia automáticamente la descarga de canciones al abrir la página de un nivel",
   "LEVEL/HACK_AUTO_START_POS": "StartPos automático",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Coloca automáticamente los StartPos en los portales",
-  "LEVEL/HACK_CBF": "Click Between Frames",
-  "LEVEL/HACK_CBF/TIP": "Interruptor para el «Click Between Frames» de Syzzi (¡debe estar instalado!)",
+  "LEVEL/CBF/HACK_CBF": "Click Between Frames",
+  "LEVEL/CBF/HACK_CBF/TIP": "Interruptor para el «Click Between Frames» de Syzzi (¡debe estar instalado!)",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Deslimitar cantidad de checkpoints",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Evita el límite de 50 checkpoints",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Habilitar monedas en práctica",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Fija el cursor en la ventana mientras juegas/editas",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Juego en el menú principal",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Permite controlar a los jugadores en el menú principal",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Desactivar transiciones",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Desactiva la transición entre escenas",
   "UNIVERSAL/HACK_SAFE_MODE": "Modo seguro",
