--- a/langs/es-MX.json
+++ b/langs/es-MX.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Inicia automáticamente la descarga de canciones al abrir la página de niveles.",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Anular Límite de Checkpoints",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Remueve el límite de 50 puntos de control.",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Recoge Monedas en Práctica",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Bloquea el cursor en la ventana mientras juegas.",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Menú Principal de Juego",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Te permite controlar los vehículos dentro del menú principal.",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Sin Transición",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Elimina el efecto de transición entre menús.",
   "UNIVERSAL/HACK_SAFE_MODE": "Modo Seguro",
