--- a/langs/fi-FI.json
+++ b/langs/fi-FI.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Aloittaa automaattisesti kappaleiden lataamisen, kun avaat tasosivun",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpoint Raja Bypass",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Ohittaa 50:n checkpointin rajan",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Kerää Kolikoita Harjoituksessa",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Lukitse hiiren ikkunaan kun pelaat/muokkaat",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Päävalikko Pelaaminen",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Ohjaa pelaamista päävalikossa",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Ei Siirtymistä",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Lyhentää scenen siirtymäajan nollaan",
   "UNIVERSAL/HACK_SAFE_MODE": "Turvallinen Tila",
