--- a/langs/hu-HU.json
+++ b/langs/hu-HU.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Automatikusan elkezdi letölteni a zenét, amikor megnyílik a pálya oldala",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpoint Limit",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Lehet több mint 50 checkpointot rakni",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Coinok Practice-ben",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Bezárja a kurzort az ablakon belülre a játék folyamán",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Főmenü játszás",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Lehet irányítni a kis kátékosokat a főmenüben",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Átmenet",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Két jelenet közütti átmenet instant lesz",
   "UNIVERSAL/HACK_SAFE_MODE": "Bitonságos Mód",
