--- a/langs/ja-JP.json
+++ b/langs/ja-JP.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "レベルページを開くと自動で曲をダウンロード開始します",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "チェックポイント制限解除",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "50チェックポイントの制限を解除します",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "練習でコイン収集",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "プレイ中や編集中にカーソルをウィンドウ内に固定します",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "メインメニュープレイ",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "メインメニューのゲームプレイを操作可能にします",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "トランジションなし",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "シーントランジション時間を0秒に短縮します",
   "UNIVERSAL/HACK_SAFE_MODE": "セーフモード",
