--- a/langs/sv-SE.json
+++ b/langs/sv-SE.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Börjar automatiskt ladda ner låtar när du öppnar nivåsidan",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Förbikoppling Av Kontrollpunkter",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Tillåter att passera gränsen på 50 kontrollpunkter",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Samla mynt i praktiken",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Låser markören till fönstret under uppspelning/redigering",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Huvudmeny Spela",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Ta kontroll över spelet i huvudmenyn",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Ingen Övergång",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Förkortar scenövergångstiden till 0s",
   "UNIVERSAL/HACK_SAFE_MODE": "Säkert Läge",
