--- a/langs/vi-VN.json
+++ b/langs/vi-VN.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Tự động tải nhạc khi bạn mở trang xem level",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Tắt giới hạn checkpoint",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Tắt giới hạn 50 checkpoint",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Thu thập xu trong chế độ luyện tập",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Giữ con trỏ trong cửa sổ khi đang chơi/edit level",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Chơi ở Main Menu",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Điều khiển gameplay ở Main Menu",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Tắt transition",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Cho hết tất cả các transition về 0 giây",
   "UNIVERSAL/HACK_SAFE_MODE": "Chế độ an toàn",
