--- a/langs/zh-CN.json
+++ b/langs/zh-CN.json
@@ -272,8 +272,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "打开关卡详情时自动下载歌曲和音效",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "Click Between Frames",
-  "LEVEL/HACK_CBF/TIP": "开关 Syzzi 的CBF(须已安装)",
+  "LEVEL/CBF/HACK_CBF": "Click Between Frames",
+  "LEVEL/CBF/HACK_CBF/TIP": "开关 Syzzi 的CBF(须已安装)",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "检查点解除限制",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "解除最多50个检查点的限制",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "练习模式硬币",
@@ -418,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "打关和造关时锁定鼠标在游戏窗口内",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "游玩主菜单",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "可以控制主菜单背景的gameplay",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "无过场动画",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "去除游戏内的过场动画",
   "UNIVERSAL/HACK_SAFE_MODE": "安全模式",
