--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -274,8 +274,8 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "Portaletan automatikoki StartPos kokatzen ditu",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Syzzi-k sortutako Click Between Frames-eko etengailua (jadanik jaitsita egin behar da!)",
-  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
-  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click on Steps",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Sarrerak 240 TPS-ko zehaztasunarekin bakarrik erregistratzea egiten ditu, jatorrizko fisikak mantenduz",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpoint Mugaren Bypass",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "50 checkpoint-en muga kentzen du",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Praktikan Txanponak Hartu",
@@ -420,8 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Jolastean/Editatzean, kurtsorea lehioaren barruan giltzaperatzen du",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Jolastu Menu Nagusian",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Menu nagusien jokalarien kontrola har ezazu!",
-  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
-  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "Audioa Desagertzerik Ez",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Abestiak desagertaraztea gelditzen ditu. Beat egindakoa",
   "UNIVERSAL/HACK_NO_TRANSITION": "Transiziorik Ez",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Agertokien transizio-denbora 0 segundura laburtzen du",
   "UNIVERSAL/HACK_SAFE_MODE": "Modu Segurua",
