--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -274,8 +274,8 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "Coloca automáticamente los StartPos en los portales",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Interruptor para el «Click Between Frames» de Syzzi (¡debe estar instalado!)",
-  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
-  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click on Steps",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Registra los inputs con una precisión de 240 TPS, manteniendo las físicas Vanilla",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Deslimitar cantidad de checkpoints",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Evita el límite de 50 checkpoints",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Habilitar monedas en práctica",
@@ -420,8 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Fija el cursor en la ventana mientras juegas/editas",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Juego en el menú principal",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Permite controlar a los jugadores en el menú principal",
-  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
-  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "No desvanecer audio",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Deshabilita el efecto de desvanecimiento de las canciones. Hecho por Beat",
   "UNIVERSAL/HACK_NO_TRANSITION": "Desactivar transiciones",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Desactiva la transición entre escenas",
   "UNIVERSAL/HACK_SAFE_MODE": "Modo seguro",
