--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -25,6 +25,7 @@
   "MESSAGE/YES": "Да",
   "MESSAGE/NO": "Нет",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Вы уверены, что хотите выйти из аккаунта Mega Hack?",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Вы уверенны, что хотите загрузить настройки 8 версии? это перезапишет ваши нынешние настройки",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Пожалуйста, вы должны выйти из редактора или уровня прежде чем включать полноэкранный режим",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Ваш макрос содержит несохраненные изменения, вы уверены, что хотите очистить его и начать заново?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Вы уверены, что хотите удалить выбранный макрос?",
@@ -43,6 +44,7 @@
   "HOME/ANIM_SPEED": "Анимации (мс)",
   "HOME/ANIM_SPEED/PRE": "Анимации",
   "HOME/ANIM_SPEED/SUF": "мс",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "Поучавствовать в переводе",
   "HOME/DOT": "Индикатор точка",
   "HOME/DOT/TIP": "Добавляет внутриигровой точку-индикатор в интерфейс Mega Hack (К примеру Iconic или Mobile)",
   "HOME/SHORTCUT/ALT": "Горячая клавиша меню",
@@ -272,6 +274,8 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "Автоматически ставит точки возрождения внутри порталов",
   "LEVEL/HACK_CBF": "Клики меж кадров",
   "LEVEL/HACK_CBF/TIP": "Включает Click Between Frames от Syzzi (Должен быть установлен!)",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Кликать в тики",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Регистрирует нажатия 240 раз в секунду, сохраняет ванильную физику",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Без лимита чекпоинтов",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Убирает лимит в 50 чекпоинтов",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Собирать монеты в практике",
@@ -416,6 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Блокирует курсор внутри окна игры во время редактирования или игры в уровень",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Игра в главном меню",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Позволяет управлять иконками в главном меню игры",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "Без затухания",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Отключает затухание музыки в конце уровня",
   "UNIVERSAL/HACK_NO_TRANSITION": "Без переходов",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Удаляет время перехода мужду сценами",
   "UNIVERSAL/HACK_SAFE_MODE": "Безопасный режим",
@@ -573,6 +579,8 @@
   "STATUS/*/MOVE/DOWN": "Вниз",
   "STATUS/*/MOVE/UP": "Вверх",
   "STATUS/*/UNITS": "Показывать единицы измерения",
+  "STATUS/MESSAGE/ENABLED": "Сообщение",
+  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Сообщение",
   "STATUS/TESTMODE/ENABLED": "Тестовый режим",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Индикатор читов",
   "STATUS/FPS/ENABLED": "Счётчик кадров в секунду",
