I hate this typo in uk-UA.json

--- a/langs/uk-UA.json
+++ b/langs/uk-UA.json
@@ -108,7 +108,7 @@
   "COSMETIC/HACK_HIDE_PLAYER/TIP": "Ховає іконку гравця",
   "COSMETIC/HACK_NO_CAMERA": "Деакт. камери",
   "COSMETIC/HACK_NO_CAMERA/TIP": "Деактивує всі тригери руху камери",
-  "COSMETIC/HACK_NO_CAMERA_ZOOM": "Деакт. масшитабування камери",
+  "COSMETIC/HACK_NO_CAMERA_ZOOM": "Деакт. масштабування камери",
   "COSMETIC/HACK_NO_CAMERA_ZOOM/TIP": "Деактивує всі тригери зміни масштабу камери",
   "COSMETIC/HACK_NO_DEATH_EFFECT": "Деакт. ефектів смерті",
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Деактивує всі ефекти смерті гравця",
