--- a/langs/es-CL.json
+++ b/langs/es-CL.json
@@ -2,11 +2,11 @@
   "NX/COLOUR/B": "Azul",
   "NX/COLOUR/DROPDOWN/INPUT": "Color Hexa",
   "NX/COLOUR/G": "Verde",
-  "NX/COLOUR/H": "",
+  "NX/COLOUR/H": "Hue",
   "NX/COLOUR/INPUT": "Color Hexa",
   "NX/COLOUR/R": "Rojo",
-  "NX/COLOUR/S": "",
-  "NX/COLOUR/V": "",
+  "NX/COLOUR/S": "Saturación",
+  "NX/COLOUR/V": "Value",
   "NX/COLOUR/RESET": "Dejar el color como estaba",
   "NX/COMBO/EMPTY": "No hay items encontrados...",
   "NX/PICKER/EMPTY": "No hay archivos encontrados...",
@@ -97,7 +97,7 @@
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Partículas Clásicas",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Restablece las partículas mini clásicas que seguían al jugador",
   "COSMETIC/HACK_CLASSIC_PULSE": "",
-  "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
+  "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Permite el Pulsar por encima de 60hz, similar al Pulsar de antes de la 2.1",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Estela de Onda Clásica",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Reimplementación de la estela de onda 2.1",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Esconder Botón de Pausa",
@@ -207,7 +207,7 @@
   "CREATOR/HACK_LEVEL_EDIT/TIP": "Te deja editar cualquier nivel desde el menú de pausa",
   "CREATOR/HACK_NO_C_MARK": "Sin Marca (C)",
   "CREATOR/HACK_NO_C_MARK/TIP": "Quita la marca (C) al subir niveles copiados",
-  "CREATOR/HACK_PLACE_OVER": "Poner Encima",
+  "CREATOR/HACK_PLACE_OVER": "Superponer objetos",
   "CREATOR/HACK_PLACE_OVER/TIP": "Te deja poner el mismo objeto encima de sí mismo en el editor",
   "CREATOR/HACK_SMOOTH_EDITOR_TRAIL": "Estela Suave del Editor",
   "CREATOR/HACK_SMOOTH_EDITOR_TRAIL/TIP": "Hace que la línea de prueba en el editor sea más suave, actualizándola cada cuadro en vez de a 30fps",
@@ -240,7 +240,7 @@
   "LEVEL/AUTO_KILL/DROPDOWN/CLASSIC": "Porcentaje de Muerte Clásico",
   "LEVEL/AUTO_KILL/DROPDOWN/CLASSIC/PRE": "Clásico",
   "LEVEL/AUTO_KILL/DROPDOWN/CLASSIC/SUF": "%",
-  "LEVEL/AUTO_KILL/DROPDOWN/PLATFORMER": "Tiempo de Muerte Platformer",
+  "LEVEL/AUTO_KILL/DROPDOWN/PLATFORMER": "Tiempo de Muerte en Plataforma",
   "LEVEL/AUTO_KILL/DROPDOWN/PLATFORMER/PRE": "Platformer",
   "LEVEL/AUTO_KILL/DROPDOWN/PLATFORMER/SUF": "s",
   "LEVEL/AUTO_MUSIC_SYNC/HACK_AUTO_MUSIC_SYNC": "Sincronización Automática de Música",
@@ -264,8 +264,8 @@
   "LEVEL/FORCE_ICE/DROPDOWN/DISABLE": "Desactivar Hielo",
   "LEVEL/HACK_0_PRACTICE_COMPLETE": "0 Práctica Completado",
   "LEVEL/HACK_0_PRACTICE_COMPLETE/TIP": "Completa un nivel si lo pasas en 1 intento de práctica",
-  "LEVEL/HACK_ALL_MODES_PLATFORMER": "Todos los Modos Platformer",
-  "LEVEL/HACK_ALL_MODES_PLATFORMER/TIP": "Activa todos los modos en niveles platformer",
+  "LEVEL/HACK_ALL_MODES_PLATFORMER": "Todos los modos plataforma",
+  "LEVEL/HACK_ALL_MODES_PLATFORMER/TIP": "Activa todos los modos en niveles plataforma",
   "LEVEL/HACK_ALLOW_PAUSE_BUFFERING": "Permitir Buffer de Pausa",
   "LEVEL/HACK_ALLOW_PAUSE_BUFFERING/TIP": "Desactiva el anti-trampas de buffer de pausa",
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD": "Descarga Automática de Canciones",
@@ -273,7 +273,7 @@
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "",
-  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "Activa el Click Between Frames de Syzzi (Debes tenerlo instalado!)",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Bypass Límite de Checkpoints",
@@ -290,8 +290,8 @@
   "LEVEL/HACK_CONFIRM_PRACTICE/TIP": "Requiere confirmación antes de entrar al modo práctica",
   "LEVEL/HACK_CONFIRM_RESET": "Confirmar Reinicio",
   "LEVEL/HACK_CONFIRM_RESET/TIP": "Requiere confirmación antes de reiniciar el nivel",
-  "LEVEL/HACK_FORCE_PLATFORMER": "Forzar Platformer",
-  "LEVEL/HACK_FORCE_PLATFORMER/TIP": "Activa el modo platformer en todos los niveles",
+  "LEVEL/HACK_FORCE_PLATFORMER": "Forzar Plataforma",
+  "LEVEL/HACK_FORCE_PLATFORMER/TIP": "Activa el modo Plataforma en todos los niveles",
   "LEVEL/HACK_INSTANT_COMPLETE": "Completar al Tiro",
   "LEVEL/HACK_INSTANT_COMPLETE/TIP": "Teletransporta al jugador al final de un nivel",
   "LEVEL/HACK_JUMP_HACK": "Hack de Salto",
@@ -315,7 +315,7 @@
   "LEVEL/HACK_SHOW_TRIGGERS": "Mostrar Activadores",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Muestra los activadores en el nivel",
   "LEVEL/HACK_SHIPCOPTER": "",
-  "LEVEL/HACK_SHIPCOPTER/TIP": "",
+  "LEVEL/HACK_SHIPCOPTER/TIP": "Añade los controles de la nave al Swing, manteniendo las físicas del Swing. Hecho por Beat",
   "LEVEL/HITBOX_MULTIPLIER/HACK_HITBOX_MULTIPLIER": "Multiplicador de Hitbox",
   "LEVEL/HITBOX_MULTIPLIER/HACK_HITBOX_MULTIPLIER/TIP": "Redimensiona las hitboxes de los objetos por un multiplicador",
   "LEVEL/HITBOX_MULTIPLIER/DROPDOWN/HAZARDS/ENABLED": "Peligros",
@@ -408,8 +408,8 @@
   "UNIVERSAL/CUSTOM_BG/HACK_CUSTOM_BG/TIP": "Personaliza el color de los menús de GD",
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME": "Permitir Volumen Bajo",
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Quita el ajuste automático a 0% cuando el volumen es 3% o menos",
-  "UNIVERSAL/HACK_COMPACT_LISTS": "",
-  "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
+  "UNIVERSAL/HACK_COMPACT_LISTS": "Lista compacta",
+  "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "Reduce el alto de la lista de niveles haciéndola más compacta",
   "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Modo Seguro Automático",
   "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Activa el Modo Seguro si se usaron trucos en un intento",
   "UNIVERSAL/HACK_FAST_CHESTS": "Cofres Rápidos",
@@ -571,7 +571,7 @@
   "STATUS/FIELDS/21/FORMAT": "Línea de Estado 22",
   "STATUS/FIELDS/22/FORMAT": "Línea de Estado 23",
   "STATUS/FIELDS/23/FORMAT": "Línea de Estado 24",
-  "STATUS/*/POSITION": "",
+  "STATUS/*/POSITION": "Posición",
   "STATUS/*/POSITION/0": "Arriba-izquierda",
   "STATUS/*/POSITION/1": "Arriba-derecha",
   "STATUS/*/POSITION/2": "Abajo-izquierda",
@@ -598,13 +598,13 @@
   "STATUS/CLOCK/ENABLED": "Reloj",
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12 horas",
   "STATUS/FRAME/ENABLED": "Contador de fotogrmas",
-  "STATUS/POSITION/ENABLED": "Posicion",
-  "STATUS/REPLAY_STATE/ENABLED": "Estado de repeticion",
-  "REPLAY": "Repeticion",
-  "REPLAY/FILE": "",
-  "REPLAY/OPEN": "",
-  "REPLAY/SAVE": "",
-  "REPLAY/DELETE": "",
+  "STATUS/POSITION/ENABLED": "Posición",
+  "STATUS/REPLAY_STATE/ENABLED": "Estado de repetición",
+  "REPLAY": "Repetición",
+  "REPLAY/FILE": "Archivo",
+  "REPLAY/OPEN": "Abrir",
+  "REPLAY/SAVE": "Guardar",
+  "REPLAY/DELETE": "Borrar",
   "REPLAY/STATE/RECORD": "Grabar",
   "REPLAY/STATE/PLAY": "Reproducir",
   "REPLAY/SAVE_LAYOUT/AUTO_SAVE": "Auto-Guardado",
@@ -614,5 +614,5 @@
   "REPLAY/GAMEPLAY": "Opciones de gamplay",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Permitir la aleatoriedad",
   "REPLAY/CONVERT": "Convertir (.json, .gdr)",
-  "REPLAY/NONE": ""
+  "REPLAY/NONE": "Ningúno"
 }
