extended this one since this might be a bit confusing

--- a/langs/uk-UA.json
+++ b/langs/uk-UA.json
@@ -147,7 +147,7 @@
   "COSMETIC/NO_PARTICLES/DROPDOWN/21": "Ефект свінг-коптера",
   "COSMETIC/HACK_NO_PARTICLES_CLASSIC": "Деакт. частинок (Класична)",
   "COSMETIC/HACK_NO_PARTICLES_CLASSIC/TIP": "Деактивує частинки (точніше більшість з них)",
-  "COSMETIC/HACK_NO_PORTAL_CIRCLE": "Деакт. кільця",
+  "COSMETIC/HACK_NO_PORTAL_CIRCLE": "Деакт. кільця порталу",
   "COSMETIC/HACK_NO_PORTAL_CIRCLE/TIP": "Деактивує внутрішнє кільце при вході в портал",
   "COSMETIC/HACK_NO_PORTAL_LIGHTNING": "Деакт. блискавок у порталів",
   "COSMETIC/HACK_NO_PORTAL_LIGHTNING/TIP": "Деактивує ефект блискавки на порталах зміни розміру гравця",
