--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -47,7 +47,7 @@
   "HOME/CONTRIBUTE_TRANSLATIONS": "Поучавствовать в переводе",
   "HOME/DOT": "Индикатор точка",
   "HOME/DOT/TIP": "Добавляет внутриигровой точку-индикатор в интерфейс Mega Hack (К примеру Iconic или Mobile)",
-  "HOME/SHORTCUT/ALT": "Горячая клавиша меню",
+  "HOME/SHORTCUT/ALT": "Горячая клавиша",
   "HOME/SHORTCUT/ICONIC": "Иконки",
   "HOME/SORT_TABS": "Сортировка интерфейса",
   "HOME/SCALE": "Размер интерфейса",
@@ -173,7 +173,7 @@
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "Показывает общее число попыток в уровне вместо сессионных",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Одноцветный след",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL/TIP": "Отключает режим смешивания цветов у следа волны",
-  "COSMETIC/HACK_STARTPOS_RESET_CAMERA": "Обнуление камеры со стартовых позиций",
+  "COSMETIC/HACK_STARTPOS_RESET_CAMERA": "Обнуление камеры",
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Обнуляет настройки камеры при игре со стартовых позиций",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Остановить триггеры при смерти",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Отключает все триггеры поворота и движения после смерти игрока",
@@ -308,7 +308,7 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Показывает хитбоксы только при смерти",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "Показывать при включенном ноуклипе",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "Показать объект о который умер игрок",
-  "LEVEL/HACK_SHOW_LAYOUT": "Показать Лайаут",
+  "LEVEL/HACK_SHOW_LAYOUT": "Показать лайаут",
   "LEVEL/HACK_SHOW_LAYOUT/TIP": "Удаляет все декорации и цвета из уровня",
   "LEVEL/HACK_SHOW_TRAJECTORY": "Показать траекторию",
   "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "Рисует просчитанную траекторию, которой будет следовать игрок при зажатии/отжатии",
@@ -406,7 +406,7 @@
   "UNIVERSAL": "Универсальное",
   "UNIVERSAL/CUSTOM_BG/HACK_CUSTOM_BG": "Пользовательский фон",
   "UNIVERSAL/CUSTOM_BG/HACK_CUSTOM_BG/TIP": "Позволяет настроить фон игры",
-  "UNIVERSAL/HACK_ALLOW_LOW_VOLUME": "Разрешить низкий уровень громкости музыки",
+  "UNIVERSAL/HACK_ALLOW_LOW_VOLUME": "Разрешить низкий уровень громкости",
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Разрешает ставить значение гроскости музыки без ограничения / округления",
   "UNIVERSAL/HACK_COMPACT_LISTS": "Компактные листы",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "Уменьшает расстояние высоту уровней и комментариев в листах",
@@ -485,7 +485,7 @@
   "SPEEDHACK/LAYOUT/SPINNER": "Скорость",
   "SPEEDHACK/LAYOUT/SPINNER/PRE": "Скорость",
   "SPEEDHACK/LAYOUT/SPINNER/SUF": "х",
-  "SPEEDHACK/HACK_SPEEDHACK_AUDIO": "Влияние на звук",
+  "SPEEDHACK/HACK_SPEEDHACK_AUDIO": "Влиять на звук",
   "SPEEDHACK/HACK_SPEEDHACK_AUDIO/TIP": "Меняет скорость звука вместе с игрой",
   "SPEEDHACK/HACK_SPEEDHACK_CLASSIC": "Классический",
   "SPEEDHACK/HACK_SPEEDHACK_CLASSIC/HACK_SPEEDHACK/TIP": "Меняет время между кадрами, влияет на тики в секунду, похоже на спидхак из Cheat Engine",
@@ -493,8 +493,8 @@
   "DISPLAY/HACK_FRAME_EXTRAPOLATION": "Экстраполяция кадров",
   "DISPLAY/HACK_FRAME_EXTRAPOLATION/TIP": "Экстраполирует кадры, чтобы достичь визуального обновления выше стандартных 240 кадров в секунду",
   "DISPLAY/FPS/SPINNER": "Кадры в секунду",
-  "DISPLAY/FPS/SPINNER/SUF": " Кадров в секунду",
-  "DISPLAY/FPS/HACK_FPS": "Разблокировка кадров в секунду",
+  "DISPLAY/FPS/SPINNER/SUF": " ФПС",
+  "DISPLAY/FPS/HACK_FPS": "Кадры в секунду",
   "DISPLAY/FPS/HACK_FPS/TIP": "Ставит значение кадров в секунду. Не меняет физику без включенного обхода (Тики в секунду)",
   "DISPLAY/HACK_VSYNC": "Вертикальная синхронизация",
   "DISPLAY/HACK_VSYNC/TIP": "Синхронизирует кадры в секунду с герцовкой монитора, уменьшает разрывы кадров",
@@ -609,7 +609,7 @@
   "REPLAY/STATE/PLAY": "Воспроизвести",
   "REPLAY/SAVE_LAYOUT/AUTO_SAVE": "Автосохранение",
   "REPLAY/SAVE_LAYOUT/SAVE": "Сохранить",
-  "REPLAY/END_LAYOUT/CLEAR": "Очистить и создать новый",
+  "REPLAY/END_LAYOUT/CLEAR": "Очистить",
   "REPLAY/END_LAYOUT/DELETE": "Удалить",
   "REPLAY/GAMEPLAY": "Настройки воспроизведения",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Разрешить случайность",
