--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -25,7 +25,7 @@
   "MESSAGE/YES": "Да",
   "MESSAGE/NO": "Нет",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Вы уверены, что хотите выйти из аккаунта Mega Hack?",
-  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Вы уверенны, что хотите загрузить настройки 8 версии? это перезапишет ваши нынешние настройки",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Вы уверенны, что хотите загрузить настройки 8 версии? Это перезапишет ваши нынешние настройки",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Пожалуйста, вы должны выйти из редактора или уровня прежде чем включать полноэкранный режим",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Ваш макрос содержит несохраненные изменения, вы уверены, что хотите очистить его и начать заново?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Вы уверены, что хотите удалить выбранный макрос?",
@@ -56,7 +56,7 @@
   "HOME/THEME": "Тема",
   "HOME/MISC": "Смешанное",
   "HOME/MISC/LICENSES": "Лицензии",
-  "HOME/MISC/LOAD_LANG": "Загрузить язык",
+  "HOME/MISC/LOAD_LANG": "Выбрать язык",
   "HOME/MISC/LOAD_LEGACY_SAVE": "Импортировать сохранение из 8 версии",
   "HOME/MISC/LOGOUT": "Выход из аккаунта",
   "KEYBINDS": "Горячие клавиши",
