--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -61,7 +61,7 @@
   "HOME/MISC/LOGOUT": "Выход из аккаунта",
   "KEYBINDS": "Горячие клавиши",
   "KEYBINDS/SHORTCUT": "Выбрать клавишу",
-  "KEYBINDS/SET": "Выберете мод для установки",
+  "KEYBINDS/SET": "Выберите мод для установки",
   "KEYBINDS/VIEW": "Посмотреть горячие клавиши",
   "KEYBINDS/REMOVE": "Удалить горячие клавиши",
   "KEYBINDS/DISABLE_IN_EDITOR": "Отключить в редакторе",
