--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -177,7 +177,7 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Обнуляет настройки камеры при игре со стартовых позиций",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Остановить триггеры при смерти",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Отключает все триггеры поворота и движения после смерти игрока",
-  "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Обрезание следа",
+  "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Срезать след",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Возвращает ошибку обрезания следа",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Частота (х)",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "Частота",
@@ -203,7 +203,7 @@
   "CREATOR/HACK_FREE_SCROLL/TIP": "Позволяет пролистывать камеру за пределы редактора",
   "CREATOR/HACK_HIDE_UI": "Скрыть пользовательский интерфейс",
   "CREATOR/HACK_HIDE_UI/TIP": "Скрыть пользовательский интерфейс редактора",
-  "CREATOR/HACK_LEVEL_EDIT": "Редактор уовня",
+  "CREATOR/HACK_LEVEL_EDIT": "Редактор уровня",
   "CREATOR/HACK_LEVEL_EDIT/TIP": "Позволяет зайти в редактор любого уровня через меню паузы",
   "CREATOR/HACK_NO_C_MARK": "Без метки С",
   "CREATOR/HACK_NO_C_MARK/TIP": "Удаляет (C) метку при выкладывании скопированного уровня",
