--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -268,18 +268,18 @@
   "LEVEL/HACK_ALL_MODES_PLATFORMER/TIP": "플랫포머 레벨에서 모든 모드를 활성화합니다.",
   "LEVEL/HACK_ALLOW_PAUSE_BUFFERING": "일시 정지 버퍼링 허용",
   "LEVEL/HACK_ALLOW_PAUSE_BUFFERING/TIP": "일시 정지 버퍼링 안티치트를 비활성화합니다.",
-  "LEVEL/HACK_AUTO_SONG_DOWNLOAD": "노래 자동 다운로드",
-  "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "레벨 페이지를 열면 자동으로 노래를 다운로드합니다.",
+  "LEVEL/HACK_AUTO_SONG_DOWNLOAD": "음악 자동 다운로드",
+  "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "레벨 페이지를 열면 자동으로 음악을 다운로드합니다.",
   "LEVEL/HACK_AUTO_START_POS": "자동 스타트포스",
   "LEVEL/HACK_AUTO_START_POS/TIP": "포탈에 스타트포스를 자동으로 배치합니다.",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
-  "LEVEL/CBF/HACK_CBF/TIP": "Click Between Frames를 켜거나 끕니다. Syzzi 제작 (설치가 필요합니다!)",
-  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
-  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "Click Between Frames를 켜거나 끕니다. by Syzzi (설치가 필요합니다!)",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "스탭에서 클릭",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "240 TPS 정밀도의 입력만 감지하며, 기본 물리를 유지합니다.",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "체크포인트 제한 우회",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "50개의 체크포인트 제한을 우회합니다.",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "연습 모드에서 코인 획득",
-  "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE/TIP": "연습 모드에서 시크릿 코인과 유저 코인을 획득할 수 있습니다. WEGFan 제작",
+  "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE/TIP": "연습 모드에서 시크릿 코인과 유저 코인을 획득할 수 있습니다. Made by WEGFan",
   "LEVEL/HACK_CONFIRM_EXIT": "종료 확인",
   "LEVEL/HACK_CONFIRM_EXIT/TIP": "레벨을 종료하기 전에 확인을 요구합니다.",
   "LEVEL/HACK_CONFIRM_FULL_RESET": "전체 초기화 확인",
@@ -420,8 +420,8 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "플레이/편집 중 창에 커서를 고정합니다.",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "메인 메뉴 플레이",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "메인 메뉴에서 게임플레이를 제어할 수 있습니다.",
-  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
-  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "오디오 페이드 아웃 비활성화",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "음악의 페이드 아웃을 비활성화합니다. By Beat",
   "UNIVERSAL/HACK_NO_TRANSITION": "전환 비활성화",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "장면 전환 시간을 0초로 단축합니다.",
   "UNIVERSAL/HACK_SAFE_MODE": "안전 모드",
