--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -173,8 +173,8 @@
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "세션 시도 횟수 대신 레벨 내 총 시도 횟수를 표시합니다.",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "솔리드 웨이브 트레일",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL/TIP": "흑백 트레일처럼 웨이브 트레일에 섞이지 않습니다.",
-  "COSMETIC/HACK_STARTPOS_RESET_CAMERA": "StartPos 카메라 초기화",
-  "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "강제로 각 StartPos의 카메라를 재설정합니다.",
+  "COSMETIC/HACK_STARTPOS_RESET_CAMERA": "스타트포스 카메라 초기화",
+  "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "강제로 각 스타트포스의 카메라를 재설정합니다.",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "사망 시 트리거 정지",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "사망 시 이동/회전 트리거를 정지하여 사망 원인을 확인할 수 있습니다.",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "트레일 커팅",
